# freeblocks

./: .gitignore  CMakeLists.txt  Makefile  README  emscripten.sh  freeblocks.desktop  index_template.html  itch.sh  valgrind.sh
art_src/: background.xcf  background_drop.xcf  background_jewels.xcf
pkg/: default.gcw0.desktop  make_opk.sh
pkg/android/: .cproject  .project  AndroidManifest.xml  README.android  build.xml
pkg/android/assets/: res
pkg/android/jni/src/: Android.mk
pkg/android/res/layout/: main.xml
pkg/android/res/values/: strings.xml
pkg/freeblocks-android/: import-summary.txt
pkg/freeblocks-android/app/: build.gradle
pkg/freeblocks-android/app/src/main/java/org/freeblocks/app/: Freeblocks.java
pkg/freeblocks-android/app/src/main/jni/: Application.mk
pkg/freeblocks-android/app/src/main/jni/src/: Android.mk  SDL  SDL_image  SDL_mixer  SDL_ttf
pkg/gcw-zero/: default.gcw0.desktop  make_opk.sh
pkg/itch/: .itch.toml  freeblocks.sh
src/: block.c  block.h  draw.c  draw.h  easing.c  easing.h  game.c  game.h  game_mode.c  game_mode.h  main.c  menu.c  menu.h  string.c  string.h  sys.c  sys.h
src/dork/: dork_string.c  dork_string.h
